# tplr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
tplr/: __init__.py  __main__.py  lib.py  lib_test.py  main.py
tplr/test/: content.txt  expected.txt  file3.txt
tplr/test/subdir/: file4.txt
