[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tplr"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A tool to parse template files with file inclusions and environment variable expansion."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
prompt-parser = "tplr.main:main"
